--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.6",
+    "@mui/material": "^7.3.2",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
+    "html5-qrcode": "^2.3.8",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
